k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wenmerge-frontend
  namespace: wenmerge

spec:
  selector:
    matchLabels:
      app: wenmerge-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: wenmerge-frontend
    spec:
      containers:
      - name: backend
        image: rootwarp/wenmerge-frontend:v0.7.0
        ports:
        - containerPort: 3000
