k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-wenmerge-frontend
  namespace: wenmerge

spec:
  type: ClusterIP
  selector:
    app: wenmerge-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
